tests/invalidTest/other/while_total_break_if.q
# EXPECT the command in while loop cannot be total return

def sint64 errorTest(){
    while 3 > 2{
        if 3>3
        then break
        else break
    }
    return 2
} 